--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <textarea id="message" name="message" rows="5" required
               class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"></textarea>
           </div>
-          <button type="#"
+          <button 
             class="w-full bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition shadow-md hover:shadow-lg">
             Send Message
           </button>
