--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
       <!-- Contact Form -->
       <div class="bg-white rounded-2xl shadow-lg p-8 transition hover:shadow-2xl">
-        <form action="#" method="POST" class="space-y-6">
+        <form id="contact-form" method="POST" class="space-y-6">
           <div>
             <label for="name" class="block text-gray-700 font-medium mb-2">Your Name</label>
             <input type="text" id="name" name="name" required
@@ -193,7 +193,9 @@
             <textarea id="message" name="message" rows="5" required
               class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 transition"></textarea>
           </div>
-          <button 
+          <button
+            id="send-button"
+            type="submit"
             class="w-full bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition shadow-md hover:shadow-lg">
             Send Message
           </button>
@@ -293,6 +295,28 @@
         navbar.classList.remove('bg-white', 'bg-opacity-90', 'backdrop-blur-md', 'shadow-md');
       }
     });
+
+    // Handle Contact Form Submission
+    const contactForm = document.getElementById('contact-form');
+    if (contactForm) {
+      contactForm.addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Basic validation
+        const name = document.getElementById('name').value;
+        const email = document.getElementById('email').value;
+        const message = document.getElementById('message').value;
+
+        if (name.trim() === '' || email.trim() === '' || message.trim() === '') {
+          alert('Please fill out all fields.');
+          return;
+        }
+        
+        // Simulate sending message
+        alert('Message sent successfully!');
+        contactForm.reset(); // Clear the form fields
+      });
+    }
   </script>
 </body>
 </html>
