--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
 
       <!-- Book Appointment Button -->
-      <a href="#booking"
+      <a href="#bookinga"
          class="ml-4 inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-5 py-2 rounded-full shadow-md transition">
         Book Appointment
       </a>
@@ -73,7 +73,7 @@
     <p class="text-lg md:text-xl font-light text-gray-200 mb-8">
       Experience compassionate dental care powered by innovation and delivered with precision at Bright Smiles Dental.
     </p>
-    <a href="#booking"
+    <a href="#bookinga"
        class="inline-block bg-blue-600 hover:bg-blue-700 text-white text-lg font-medium px-8 py-3 rounded-full shadow-lg transition duration-300 ease-in-out">
       Book Your Appointment
     </a>
@@ -168,7 +168,7 @@
 <section id="contact" class="bg-gradient-to-br from-blue-50 to-white py-20 px-6 md:px-10 lg:px-20">
   <div class="max-w-7xl mx-auto">
     <div class="text-center mb-16">
-      <h3 class="text-4xl font-extrabold text-gray-900 mb-4 tracking-tight">Get in Touch</h3>
+      <h3 id="bookinga"class="text-4xl font-extrabold text-gray-900 mb-4 tracking-tight">Get in Touch</h3>
       <p class="text-gray-600 max-w-2xl mx-auto text-lg">
         Have questions or want to schedule a visit? Reach out and we’ll get back to you shortly.
       </p>
